--- a/package.json
+++ b/package.json
@@ -1,10 +1,11 @@
 {
   "name": "saman",
   "version": "0.0.1",
-  "description": "Deep object equality checker",
+  "description": "Deep object diff and equality checker",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "jest --coverage",
+    "build": "node build.js dist saman"
   },
   "repository": {
     "type": "git",
@@ -15,5 +16,11 @@
   "bugs": {
     "url": "https://github.com/computationalabstraction/Saman/issues"
   },
-  "homepage": "https://github.com/computationalabstraction/Saman#readme"
+  "homepage": "https://github.com/computationalabstraction/Saman#readme",
+  "devDependencies": {
+    "@babel/core": "^7.11.6",
+    "@babel/preset-env": "^7.11.5",
+    "babel-preset-minify": "^0.5.1",
+    "jest": "^26.5.2"
+  }
 }
