--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "jest --coverage",
-    "build": "node build.js dist saman"
+    "build": "npx standard src/saman.js --fix ; node build.js dist saman"
   },
   "repository": {
     "type": "git",
